erased an error in main branch and adding a new line to feature branch

--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 
 <html>
     <head><title>Index</title></head>
-    <body>index</body>
+    <body>
+        index
+        added a new feature
+    </body>
 </html
